welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {
                           ^